--- a/aboutus.html
+++ b/aboutus.html
@@ -26,8 +26,8 @@
 
     <header class="navbar">
         <div class="logo">
-            <a href="../inicio.html"><img src="../img/logo.png" alt="logo"></a>
-            <h1><a href="../inicio.html">VinylTape</a></h1>
+            <a href="../index.html"><img src="../img/logo.png" alt="logo"></a>
+            <h1><a href="../index.html">VinylTape</a></h1>
         </div>
         <div class="navbar-items-div">
             <div class="mitad1">
