--- a/cassette.html
+++ b/cassette.html
@@ -21,8 +21,8 @@
     <!-- NAVBAR -->
     <header class="navbar">
         <div class="logo">
-            <a href="../inicio.html"><img src="../img/logo.png" alt="logo"></a>
-            <h1><a href="../inicio.html">VinylTape</a></h1>
+            <a href="../index.html"><img src="../img/logo.png" alt="logo"></a>
+            <h1><a href="../index.html">VinylTape</a></h1>
         </div>
         <div class="navbar-items-div">
             <div class="mitad1">
@@ -48,7 +48,7 @@
                 </a>
             </div>
                 <div class="dropdown-content-responsive">
-                    <a href="../inicio.html">Inicio</a>
+                    <a href="../index.html">Inicio</a>
                     <a href="login.html">Iniciar sesión</a>
                     <a href="vinilo.html">Vinilos</a>
                     <a href="cd.html">CDs</a>
@@ -65,7 +65,9 @@
     <main>
         <!-- TITULO -->
         <div id="contenedor1">
+            <div class="titulo">
             <h1>Cassettes</h1>
+            </div>
         </div>
 
         <!-- CARDS -->
