--- a/cd.html
+++ b/cd.html
@@ -20,8 +20,8 @@
     <!-- NAVBAR -->
     <header class="navbar">
         <div class="logo">
-            <a href="../inicio.html"><img src="logo.png" alt="logo"></a>
-            <h1><a href="../inicio.html">VinylTape</a></h1>
+            <a href="../index.html"><img src="logo.png" alt="logo"></a>
+            <h1><a href="../index.html">VinylTape</a></h1>
         </div>
         <div class="navbar-items-div">
             <div class="mitad1">
@@ -64,7 +64,9 @@
     <main>
         <!-- TITULO -->
         <div id="contenedor1">
+            <div class="titulo">
             <h1>CDs</h1>
+            </div>
         </div>
 
         <!-- CARDS -->
