--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <img src="logo.png" alt="logo">
         </div>
         <div class="login-container">
-            <form class="login-form" action="../inicio.html">
+            <form class="login-form" action="../index.html">
                 <h2>Iniciar Sesión</h2>
                 <input type="text" placeholder="Nombre de usuario" required>
                 <input type="password" placeholder="Contraseña" required>
