--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Iniciar sesión</title>
     <link rel="shortcut icon" href="logo.png">
+    <link href="logo.png">
 </head>
 <body>
     <div class="contenedor">
