--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 <body>
     <div class="contenedor">
         <div class="logo">
-            <img src="logo.png" alt="logo">
+            <img src="../logo.png" alt="logo">
         </div>
         <div class="login-container">
             <form class="login-form" action="../index.html">
