--- a/cd.html
+++ b/cd.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>CDs</title>
-    <link rel="shortcut icon" href="logo.png">
+    <link rel="shortcut icon" href="imagenes/logo.png">
     <style>
     #cds{
     background-color: #B51B75;
@@ -20,7 +20,7 @@
     <!-- NAVBAR -->
     <header class="navbar">
         <div class="logo">
-            <a href="../index.html"><img src="logo.png" alt="logo"></a>
+            <a href="../index.html"><img src="imagenes/logo.png" alt="logo"></a>
             <h1><a href="../index.html">VinylTape</a></h1>
         </div>
         <div class="navbar-items-div">
