--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Inicio</title>
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="shortcut icon" href="imagenes/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
         <div class="fondo-inicio">
             <div class="logo">
                 <div class="logo-logo">
-                    <img src="img/logo.png" alt="logo">
+                    <img src="imagenes/logo.png" alt="logo">
                     <h1>VinylTape</h1>
                 </div>
                 <div class="texto">
@@ -34,19 +34,19 @@ Explora nuestro catálogo y redescubre el placer de coleccionar música. Desde c
             <div class="menu">
                 <div class="tarjeta">
                     <a href="vinilo.html" class="enlace-tarjeta">
-                        <img src="vinilo.jpg" alt="vinilo">
+                        <img src="imagenes/vinilo.jpg" alt="vinilo">
                         <span class="texto-tarjeta">Vinilos</span>
                     </a>
                 </div>
                 <div class="tarjeta">
                     <a href="cd.html" class="enlace-tarjeta">
-                        <img src="cd.png" alt="cds">
+                        <img src="imagenes/cd.png" alt="cds">
                         <span class="texto-tarjeta">CDs</span>
                     </a>
                 </div>
                 <div class="tarjeta">
                     <a href="cassette.html" class="enlace-tarjeta">
-                        <img src="cassette.jpg" alt="cassette">
+                        <img src="imagenes/cassette.jpg" alt="cassette">
                         <span class="texto-tarjeta">Cassettes</span>
                     </a>
                 </div>
