--- a/login.html
+++ b/login.html
@@ -7,22 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Iniciar sesión</title>
-    <link rel="shortcut icon" href="logo.png">
-    <link href="logo.png">
+    <link rel="shortcut icon" href="imagenes/logo.png">
+    <link href="./imagenes/logo.png">
 </head>
 <body>
     <div class="contenedor">
         <div class="logo">
-            <img src="../logo.png" alt="logo">
+            <img src="./imagenes/logo.png" alt="logo">
         </div>
         <div class="login-container">
             <form class="login-form" action="../index.html">
                 <h2>Iniciar Sesión</h2>
-                <input type="text" placeholder="Nombre de usuario" required>
-                <input type="password" placeholder="Contraseña" required>
+                <input class="user" type="text" placeholder="Nombre de usuario" required>
+                <input class="user " type="password" placeholder="Contraseña" required>
                 <button type="submit">Ingresar</button>
             </form>
         </div>
     </div>
 </body>
+<script src="./index.js"></script>
 </html>
