--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
 
     <header class="navbar">
         <div class="logo">
-            <a href="../index.html"><img src="../img/logo.png" alt="logo"></a>
+            <a href="../index.html"><img src="imagenes/logo.png" alt="logo"></a>
             <h1><a href="../index.html">VinylTape</a></h1>
         </div>
         <div class="navbar-items-div">
@@ -73,7 +73,7 @@
 
 <div class="d-flex justify-content-center" class="container-dad" class="grid gap-3">
 <div class="card" style="width: 18rem;">
-    <img src="argentina.png" class="card-img-top" alt="">
+    <img src="imagenes/argentina.png" class="card-img-top" alt="">
     <div class="card-body" class="p-2 g-col-6">
       <h5 class="card-title">Nombre</h5>
       <p class="card-text">Pais</p>
