--- a/cassette.html
+++ b/cassette.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <title>Cassettes</title>
-    <link rel="shortcut icon" href="logo.png">
+    <link rel="shortcut icon" href="imagenes/logo.png">
     <style>
     #cassettes{
     background-color: #B51B75;
@@ -21,7 +21,7 @@
     <!-- NAVBAR -->
     <header class="navbar">
         <div class="logo">
-            <a href="../index.html"><img src="../img/logo.png" alt="logo"></a>
+            <a href="../index.html"><img src="imagenes/logo.png" alt="logo"></a>
             <h1><a href="../index.html">VinylTape</a></h1>
         </div>
         <div class="navbar-items-div">
