--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 <h2>Iniciar Sesión</h2>
                 <input class="user" type="text" placeholder="Nombre de usuario" required>
                 <input class="user " type="password" placeholder="Contraseña" required>
-                <button type="submit">Ingresar</button>
+                <button href="index.html" type="submit">Ingresar</button>
             </form>
         </div>
     </div>
